--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
   "editor.fontSize": 14,
   "editor.accessibilityPageSize": 10,
-  "window.zoomLevel": 1
+  "window.zoomLevel": 1,
+  "powermode.combo.counterSize": 0,
+  "powermode.combo.timeout": 10,
+  "powermode.shake.enabled": false
 }
